# internal/models/region.model.go
@@ -1,0 +1,6 @@
+package models
+
+type Region struct {
+	RegionID          int    `json:"region_id"`
+	RegionDescription string `json:"region_description"`
+}
