# internal/routes/teritory.route.go
@@ -1,0 +1,14 @@
+package routes
+
+import (
+	"northwind-api/internal/handlers"
+
+	"github.com/gin-gonic/gin"
+)
+
+func RegisterTeritoryRoutes(rg *gin.RouterGroup, h *handlers.RegionHandler) {
+	teritories := rg.Group("/territories")
+	{
+		teritories.GET("/:id/employees", h.GetEmployeesByTerritoryID)
+	}
+}
